# py_start

./: .env.template  .gitignore  README.md  install.sh  pyproject.toml
.cursor/rules/: python_best_practices.txt
src/py_start/: cli.py
src/zura/: cli.py  config.py
